--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/lab": "^5.0.0-alpha.137",
     "@mui/material": "^5.14.0",
+    "@mui/x-date-pickers": "^6.10.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "dayjs": "^1.11.9",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "npm-run-all": "^4.1.5",
