--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dayjs": "^1.11.9",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "google-auth-library": "^9.0.0",
     "googleapis": "^122.0.0",
     "npm-run-all": "^4.1.5",
     "react": "^18.2.0",
